# sanctuary-stream

./: .env.example  .envrc  .eslintignore  .eslintrc.cjs  .gitignore  BUILD_COMMANDS.md  BUILD_TEST_RUN.md  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  DEPLOYMENT_STATUS.txt  DEV_AUTOMATION.md  DIBR.md  FINAL_ANSWER.md  FINAL_INSTALLATION_CHECKLIST.md  FINAL_STATUS.md  FINAL_SUMMARY.md  HOW_TO_BUILD_RUN_TEST_DEPLOY.md  INSTALLATION_GUIDE.md  Jenkinsfile  LICENSE  MANIFEST.md  NEXT_STEPS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_INSTALLATION.md  RUN_THIS_FIRST.md  SESSION_RECOVERY.md  SHELL_CONFIG.md  SRVDD.md  START-BUN.sh  START.sh  STATUS_FINAL.md  agents.md  build.gradle  install.sh  justfile  (+7 more)
.github/: FUNDING.yml
.github/workflows/: build-release.yml  ci.yml  release.yml  test.yml
docs/: ADMIN_SETUP.md  ARCHITECTURE.md  ARCHITECTURE.md.bak3  AUTO_DEPLOY_GUIDE.md  BUILD_AND_RUN.md  BUN_UPGRADE.md  CI_CD_SUMMARY.md  COMPLETE_GUIDE.md  COMPLETE_INSTALLATION.md  DEPLOYMENT.md.bak2  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION.md  DEVELOPMENT.md  DEVELOPMENT.md.bak  DEVELOPMENT.md.bak2  DEVELOPMENT.md.bak3  DISTRIBUTION_PATHS.md  ENV_VARS.md  FUNCTIONAL_STYLE.md  IDE_SETUP.md  INDEX.md  INTEGRATIONS.md  MANIFEST.md  OBS_INTEGRATION.md  ONBOARDING_AUDIT.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  PRODUCTION_SETUP.md  PROFESSIONAL_VIDEO_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RELEASING.md  SECURITY.md.bak  STATION_SETUP.md  SUPER_USER_CONFIGURATION.md  TODO_WRY_WEBKIT_FIX.md  USER_GUIDE.md
docs/archive/: ADMIN_SETUP.md  AUTO_DEPLOY_GUIDE.md  BUILD_AND_RUN.md  BUILD_DEPLOY_GUIDE.md  BUILD_DEPLOY_VERIFIED.md  CLI.md  COMPLETE_SETUP_DEMO.md  DEMO_VERIFICATION.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERIFICATION.md  E2E_TEST_CHECKLIST.md  FINAL_OPTIMIZATIONS_SUMMARY.md  GITHUB_SETUP.md  HONEST_TEST_RESULTS.md  HOW_TO_BUILD_AND_RUN.md  INSTALLATION_DISTRIBUTION.md  INSTALLATION_GUIDE.md  MULTI_BACKEND.md  NEXT_STEPS.md  ORGANIZATION_SUMMARY_2026-03-08.md  PERFORMANCE_COMPARISON.md  PLATFORM_STATUS.md  PLATFORM_SUPPORT.md  PLATFORM_VERIFICATION.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_OLD.md  README.md  READY_TO_DEPLOY.md  READY_TO_USE.md  REFACTOR_STATUS.md  STATUS_FINAL.md  USER_GUIDE.md  USER_ONBOARDING.md
docs/archive/legacy/: ADMIN_SETUP.md  ARCHITECTURE_COMPLETE.md  BUILD_TEST_RUN_GUIDE.md  CI_CD_SUMMARY.md  COMPLETE_GUIDE.md  COMPLETE_INSTALLATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  E2E_TEST_CHECKLIST.md  FINAL_STATUS.md  INSTALLATION_DISTRIBUTION.md  MULTI_BACKEND.md  MULTI_PLATFORM_BUILD_STATUS.md  MULTI_PLATFORM_CLOUD.md  ONBOARDING_AUDIT.md  PLATFORM_STATUS.md  PLATFORM_VERIFICATION.md  READY_TO_USE.md  STREAMING_QUALITY_READY.md  (+4 more)
integration-tests/: Production.test.ts  playwright.config.ts
integration-tests/tests/: RemoteControl.spec.ts  full-flow.spec.ts
patches/: wry-webkit-settings-ext.patch
playwright-report/: index.html
pocketbase/: collections_export.json  schema-init.js  schema-init.js.bak  schema-init.ts
pocketbase/local/: data.db  pocketbase
pocketbase/migrations/: 001_initial_schema.js
pocketbase/migrations_old/: 001_initial_schema.js.bak  002_create_commands.js  003_create_streams.js
pocketbase/pb_data/: auxiliary.db  data.db
pocketbase/pb_hooks/: cron.pb.js  settings.pb.js  webhooks.pb.js
sanctuary-app/: .env.example  .eslintrc.cjs  capacitor.config.ts  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.mts  vitest.config.ts
sanctuary-app/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
sanctuary-app/src-tauri/: Cargo.toml  tauri.conf.json
sanctuary-app/src-tauri/icons/: .gitkeep  icon.icns
sanctuary-app/src-tauri/src/: bridge.rs  bridge_tests.rs  drive.rs  main.rs
sanctuary-bridge/: .env.example  .eslintrc.cjs  config.json.example  package.json  tsconfig.json  vitest.config.mts
sanctuary-bridge/src/: config.test.ts  coverage_boost.test.ts  google-drive.test.ts  google-drive.ts  index.test.ts  index.ts  logger.test.ts  logger.ts  types.ts
sanctuary-cli/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json
sanctuary-cli-rs/: Cargo.toml
sanctuary-cli-rs/src/: main.rs  version.rs
sanctuary-cli/src/: index.ts
sanctuary-core/: Cargo.toml
sanctuary-core/src/: bridge.rs  drive.rs  lib.rs  pocketbase.rs  tests.rs  types.rs
scripts/: README.md  START-BUN.sh  START.sh  acid-test.js  build-test-deploy.sh  ci.sh  create-admin.sh  dev-iterm.scpt  dev-simple.sh  dev-tmux.sh  migrate-to-pockethost.sh  mock-obs.js  mock-obs.ts  push-to-github.sh  release.sh  setup-easy.sh  setup.sh  setup.sh.bak  start-complete.sh  stop-dev.sh  validate.sh  verify-complete.sh  verify-platform-support.sh
shared/: README.md  compression.test.ts  compression.ts  context.ts  io.test.ts  io.ts  models.test.ts  models.ts  option.test.ts  option.ts  performance.ts  result.test.ts  result.ts  schema.ts  types.ts
test-results/: .last-run.json
(+59 files in other folders)
