[package]
name = "sanctuary-core"
version = "0.3.3"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4"] }
obws = "0.12"
eventsource-client = "0.12"
futures-util = "0.3"
dotenvy = "0.15"
chrono = "0.4"
google-drive3 = "5.0"
yup-oauth2 = "9.0"
hyper-rustls = { version = "0.25", features = ["native-tokio", "http1", "tls12", "logging", "rustls-native-certs"] }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1.0"
aws-config = { version = "1.1", optional = true }
aws-sdk-s3 = { version = "1.15", optional = true }
aws-sdk-sqs = { version = "1.13", optional = true }
lapin = { version = "2.3", optional = true }
redis = { version = "0.24", optional = true }

[features]
cloud-aws = ["aws-config", "aws-sdk-s3", "aws-sdk-sqs"]
cloud-rabbitmq = ["lapin"]
cloud-redis = ["redis"]
all-integrations = ["cloud-aws", "cloud-rabbitmq", "cloud-redis"]
