[package]
name = "sanctuary-stream"
version = "0.3.4"
description = "Secure-by-Design church streaming control system"
authors = ["Sanctuary Stream Contributors"]
license = "MIT"
repository = "https://github.com/brentmzey/sanctuary-stream"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
sanctuary-core = { path = "../../sanctuary-core" }
tauri = { version = "1.6", features = ["dialog-all", "fs-read-dir", "fs-read-file", "fs-write-file", "http-all", "notification-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4"] }
dotenvy = "0.15"
chrono = "0.4"
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cloud-aws = ["sanctuary-core/cloud-aws"]
cloud-rabbitmq = ["sanctuary-core/cloud-rabbitmq"]
cloud-redis = ["sanctuary-core/cloud-redis"]
all-integrations = ["sanctuary-core/all-integrations"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }
